# PHES-ODM-Validation

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  LICENSE  README.md  api.html  genindex.html  index-content.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  rules.html  search.html  searchindex.js  utils.py
_sources/: api.rst.txt  index-content.md.txt  index.rst.txt
_static/: alabaster.css
docs/: .gitignore  README.md  api.rst  conf.py  convert.sh  doc_utils.py  index-content.md  index-content.qmd  requirements.txt  rules.rst
examples/: tutorial.html  tutorial.qmd
inttests/: README.md  test-import.sh  test_import.sh
links/: code_of_conduct_link.html  contributing_link.html  license_link.html
metadata/: validation-rules-list.csv  validation-rules.csv
specs/: generate-cerberus-schema.md  generate-validation-schema-function.html  generate-validation-schema.html  module-functions.html  module-functions.md  odm-how-tos.html  odm-how-tos.md  summarize-report-function.html  summarize-tool.html  summary-report.html  validate-data.md  validate-tool.html  validation-rule.html  validation.md  versioning.html  versioning.md
tests/: common.py  context.py  requirements.txt  test_coercion.py  test_duplicate_entries_found.py  test_empty.py  test_invalid_category.py  test_invalid_type.py  test_min_max_length.py  test_min_max_value.py  test_missing_mandatory_column.py  test_missing_mandatory_header.py  test_missing_values_found.py  test_parts.py  test_reports.py  test_rule_filter.py  test_schema_additions.py  test_schema_generation.py  test_stdext.py  test_summarization.py  test_summarize_tool.py  test_table_infer.py  test_validation.py  test_version.py  test_versions.py
tools/: generate_schemas.py  render_quarto_docs.py  reportutils.py  requirements.txt  summarize.py  validate.py  validate_xlsx.py
validation-rules/: InvalidCategory.md  MissingMandatoryColumn.md  README.html  README.md  _setup.qmd  duplicate_entries_found.html  duplicate_entries_found.ipynb  duplicate_entries_found.md  duplicate_entries_found.qmd  duplicate_values_found.md  greater_than_max_length.html  greater_than_max_length.md  greater_than_max_length.qmd  greater_than_max_value.html  greater_than_max_value.md  greater_than_max_value.qmd  invalid_category.html  invalid_category.md  invalid_category.qmd  invalid_email.html  invalid_type.html  invalid_type.md  invalid_type.qmd  less_than_min_length.html  less_than_min_length.md  less_than_min_length.qmd  less_than_min_value.html  less_than_min_value.md  less_than_min_value.qmd  missing_mandatory_column.html  missing_mandatory_column.md  missing_mandatory_column.qmd  missing_values_found.html  missing_values_found.md  (+1 more)
(+347 files in other folders)
