[project]
name = "odm-validation"
version = "0.1.0"
 authors = [
     { name="OHRI", email="PHES-ODM@ohri.ca" }
 ]
description = "Population Health and Envirmental Open Data Model (PHES-ODM) Validation Toolkit"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation"
"Bug Tracker" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation/issues"
