[project]
name = "odm_validation"
version = "0.5.0"
authors = [
    { name="OHRI", email="PHES-ODM@ohri.ca" }
]
description = "Population Health and Envirmental Open Data Model (PHES-ODM) Validation Toolkit"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation"
"Bug Tracker" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation/issues"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

# https://stackoverflow.com/a/75397171
[tool.hatch.build.targets.wheel.force-include]
"assets/validation-schemas" = "odm_validation/assets/validation-schemas"

# This ensures that the dependencies are installed when the package is
# installed
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
