[project]
name = "odm_validation"
version = "0.5.0"
authors = [
    { name="OHRI", email="PHES-ODM@ohri.ca" }
]
description = "Population Health and Envirmental Open Data Model (PHES-ODM) Validation Toolkit"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation"
"Bug Tracker" = "https://github.com/Big-Life-Lab/PHES-ODM-Validation/issues"

[project.scripts]
odm-validate = "odm_validation.tools.validate:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

# specify package dir
[tool.hatch.build.targets.wheel]
packages = ["src/odm_validation"]

# include validation schemas
[tool.hatch.build.targets.wheel.force-include]
"assets/validation-schemas" = "odm_validation/assets/validation-schemas"

# install dependencies automatically
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
